# GeometryEngine

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Command.cpp  Command.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  GlobaleScope.h  Graphics.cpp  Graphics.h  Image.h  Manageable.h  Pipeline.cpp  Pipeline.h  Vertex.cpp  Vertex.h  main.cpp
ECS/: Component.cpp  Component.h
shader/: basic_shader.frag  basic_shader.vert  run_SPIR-V_compiler.sh
src/: Application.cpp  Command.cpp  Command.h  Device.cpp  Device.h  DeviceManager.h  Graphics.cpp  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  TestApp.cpp  TestApp.h  main.cpp
src/IO/: FileInput.cpp  FileInput.h
src/framework/: Color.cpp  Color.h  Detectable.cpp  Detectable.h  Framework.cpp  Framework.h  GeometryApplication.cpp  GeometryApplication.h  Image.cpp  Image.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h
